# image_search

./: .gitignore  README.md  pyproject.toml
clip_image_search/: __init__.py
clip_image_search/client/: streamlit_app.py
clip_image_search/server/: app.py  dtos.py  service.py  settings.py  singleton_store.py
clip_image_search/server/feature_processing/: searcher.py
clip_image_search/server/tests/: test_service.py
docker/: Dockerfile  docker-compose.yml
e2e_test/: sample_call.http
image_search/: __init__.py
image_search/client/: streamlit_app.py
image_search/server/: app.py  consts.py  dtos.py  service.py  settings.py  singleton_store.py
image_search/server/feature_processing/: searcher.py
image_search/server/tests/: test_service.py
scripts/: download_unsplash.py  ingest_data.py
